# Snowflake_Build

./: .gitignore  README.md  README.rst  config.py  license  pyproject.toml
src/azure/: Build_KV.bash
src/connectors/: Snowpy.py
src/encryption/: readme.md
src/initial_setup_queries/: Build_Env.sql  Build_Schemas.sql  Build_Stages.sql
src/initial_setup_queries/Security/: Build_Functional_Admin_Roles.sql  Build_Permissions_Object.sql  Build_SCIM.sql  Build_SSO.sql  Build_Security_Integration.sql  readme.md
src/logging/: cost_usage.sql  login_auditing.sql
src/snowflake_build_artifacts/: Build_Access_Roles.py
tests/: test_connectivity.sql  test_snowflake_build_artifacts.py  troubleshooting.sql
